--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   flutter_svg: ^1.0.3
   font_awesome_flutter: ^9.2.0
   flutter_screenutil: ^5.3.1
+  flutter_login: ^3.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
