feat: 添加编辑个人资料功能

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: domus
+name: maple
 description: A home automation smart application.
 publish_to: 'none'
 version: 1.0.0+1
@@ -22,6 +22,8 @@ dependencies:
   flutter_login: ^3.1.0
   intl: ^0.17.0
   shared_preferences: ^2.0.13
+  image_picker: ^0.8.4+11
+  table_calendar: ^3.0.4
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +45,7 @@ flutter:
     - assets/fonts/
     - assets/images/weather/
     - assets/icons/svg/
+    - assets/icons/menu_icons/
 
   fonts:
     - family: "Noto Sans"
@@ -57,3 +60,16 @@ flutter:
           style: "normal"
           weight: 700
 
+    - family: "ABeeZee"
+      fonts:
+        - asset: "assets/fonts/ABeeZee-Italic.ttf"
+          style: "italic"
+        - asset: "assets/fonts/ABeeZee-Regular.ttf"
+          style: "normal"
+
+    - family: "Lexend"
+      fonts:
+        - asset: "assets/fonts/Lexend-Medium.ttf"
+          weight: 500
+        - asset: "assets/fonts/Lexend-ExtraLight.ttf"
+          weight: 200
