--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   shared_preferences: ^2.0.13
   image_picker: ^0.8.4+11
   table_calendar: ^3.0.4
+  bottom_bar_with_sheet: ^2.3.1
+  lottie: ^1.2.2
 
 dev_dependencies:
   flutter_test:
