--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,12 @@ dependencies:
   table_calendar: ^3.0.4
   bottom_bar_with_sheet: ^2.3.1
   lottie: ^1.2.2
+  animations: ^2.0.0
+  flutter_icons:
+    git:
+      url: https://github.com/adarsh-technocrat/flutter-icons.git
+      branch: null-safety-migration
+  fl_chart: ^0.50.0
 
 dev_dependencies:
   flutter_test:
@@ -43,11 +49,13 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/weather/
     - assets/icons/
     - assets/fonts/
-    - assets/images/weather/
     - assets/icons/svg/
     - assets/icons/menu_icons/
+    - assets/Lottie/
+    - assets/introduction_animation/
 
   fonts:
     - family: "Noto Sans"
