--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   wifi_scan: ^0.2.1
   select_dialog: ^2.0.0
   flutter_countdown_timer: ^4.1.0
+  im_stepper: ^0.1.3
+  loading: ^1.0.2
 
 dev_dependencies:
   flutter_test:
