--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_countdown_timer: ^4.1.0
   im_stepper: ^0.1.3
   loading: ^1.0.2
+  flutter_tags: ^0.4.9+1
+  flutter_staggered_grid_view: ^0.6.1
+
 
 dev_dependencies:
   flutter_test:
