--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     git:
       url: https://github.com/adarsh-technocrat/flutter-icons.git
       branch: null-safety-migration
-  fl_chart: ^0.50.0
+  fl_chart: ^0.36.3
   flare_flutter: ^2.0.3
   awesome_circular_chart: ^1.0.0
   flutter_staggered_animations: ^1.0.0
@@ -45,7 +45,10 @@ dependencies:
   loading: ^1.0.2
   flutter_tags: ^0.4.9+1
   flutter_staggered_grid_view: ^0.6.1
-
+  google_fonts: ^2.1.0
+  charts_flutter: ^0.12.0
+  flutter_local_notifications: ^8.1.1
+  flutter_weather_bg: ^2.8.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +67,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/weather/
+    - assets/images/company/
     - assets/icons/
     - assets/fonts/
     - assets/icons/svg/
