--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   charts_flutter: ^0.12.0
   flutter_local_notifications: ^8.1.1
   flutter_weather_bg: ^2.8.0
+  firebase_storage: ^10.2.12
+  firebase_core: ^1.14.1
 
 dev_dependencies:
   flutter_test:
