--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   flutter_weather_bg: ^2.8.0
   firebase_storage: ^10.2.12
   firebase_core: ^1.14.1
+  transparent_image: ^2.0.0
+  flutter_advanced_drawer: ^1.3.2
+  syncfusion_flutter_charts: ^20.1.47+1
 
 dev_dependencies:
   flutter_test:
